# 3dhw

./: .gitignore  README.md
.github/workflows/: build.yml
common/: cube.h  linmath.h  utils.h
common/glad/include/glad/: gl.h  glx.h  wgl.h
common/glad/src/: glx.c  wgl.c
directx11/: CMakeLists.txt
directx11/src/: main.cpp
opengl/include/: gldebug.h  mesh.h  shader.h  texture.h
opengl/linux/: CMakeLists.txt
opengl/linux/src/: main.c
opengl/src/: mesh.c  shader.c  texture.c
opengl/win32/: CMakeLists.txt
opengl/win32/src/: main.c
vulkan/include/: buffers.h  device.h  pipeline.h  shader.h  swapchain.h  texture.h  vkdata.h  vkdebug.h
vulkan/linux/: CMakeLists.txt
vulkan/linux/src/: main.c
vulkan/shaders/: main.frag  main.vert
vulkan/src/: buffers.c  device.c  pipeline.c  shader.c  swapchain.c  texture.c  vkdata.c  vkdebug.c
vulkan/win32/: CMakeLists.txt
vulkan/win32/src/: main.c
